# nearbypositionstreaming

./: docker-compose.yml
data-socket/: .gitignore  Dockerfile  pyproject.toml
data-socket/src/data_socket/: __init__.py  pinot.py
kafka-scripts/: init.sh
nearbyposition-stream/: Dockerfile  check-status.sh  command.sh  dependency-reduced-pom.xml  pom.xml
nearbyposition-stream/src/main/java/org/beam/: Main.java
nearbyposition-stream/src/main/java/org/beam/dto/: NearbyDTO.java
nearbyposition-stream/src/main/java/org/beam/fn/: ExtractPointFn.java  Log.java  NearbyCombiner.java  PointCombiner.java
nearbyposition-stream/src/main/java/org/beam/models/: Location.java  Nearby.java  Point.java
nearbyposition-stream/src/main/java/org/beam/utils/: Position.java
nearbyposition-stream/src/main/resources/schemas/: location.avsc  nearby.avdl  nearby.avsc
phones/: Dockerfile  constants.py  main.py  phone.py  pyproject.toml  schema.py
pinot-scripts/: in-schema.json  in-table.json  out-schema.json  out-table.json  pinot-injestion.sh
visualization/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
visualization/src/visualization/: __init__.py  app.py  config.py
visualization/src/visualization/assets/: 0_base.css  clientside_callback.js
visualization/src/visualization/static/: utils.mjs
