[project]
name = "data-socket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rivaults", email = "rivault.sebastien@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "pinot-connect>=0.1.1",
    "quart>=0.20.0",
]

[project.scripts]
ws = "data_socket.pinot:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
