[project]
name = "visualization"
version = "0.1.0"
description = "TrackPhone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-leaflet>=1.1.3",
    "mypy>=1.18.1",
]

[project.scripts]
app = "visualization.app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
